Expand jni/JNIAttachMutatorTest to final fields in named modules